@@ -1,30 +1,17 @@
 import xyz.jpenilla.runtask.task.AbstractRun
-import xyz.jpenilla.resourcefactory.bukkit.Permission.Default
 
 plugins {
     id 'java'
-    id("io.papermc.paperweight.userdev") version "2.0.0-beta.16" // Check for new versions at https://plugins.gradle.org/plugin/io.papermc.paperweight.userdev
     id("xyz.jpenilla.run-paper") version "2.3.1"
-    id("xyz.jpenilla.resource-factory-bukkit-convention") version "1.2.0"
     id "jacoco"
     id "org.sonarqube" version "6.1.0.5360"
+    id "io.freefair.lombok" version "8.13.1"
 }
 
 group = 'org.ninkai'
 version = '1.0-SNAPSHOT'
 description = "Ninkai RP Server plugin for day and night cycle aligned on IRL time"
 def paperVersion = "1.20.1-R0.1-SNAPSHOT"
-
-bukkitPluginYaml {
-    // Defaults for name, version, and description are inherited from the Gradle project
-    main.set("org.ninkai.daynightcycle.NinkaiDayNightCycle")
-    apiVersion.set("1.20")
-    prefix.set("NinkaiDayNightCycle")
-    authors.add("POULPYY")
-    description.set("Ninkai RP Server plugin for day and night cycle aligned on IRL time")
-    website.set("https://github.com/poulpy2k")
-    defaultPermission.set(Default.OP)
-}
 
 sonar {
     properties {
@@ -48,7 +35,10 @@ repositories {
 
 dependencies {
     compileOnly("io.papermc.paper:paper-api:$paperVersion")
-    paperweight.paperDevBundle("$paperVersion")
+    implementation("com.google.guava:guava:33.4.6-jre")
+    testImplementation("org.junit.jupiter:junit-jupiter:5.12.1")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testImplementation("com.github.seeseemelk:MockBukkit-v1.20:3.46.0")
 }
 
 def targetJavaVersion = 21
@@ -59,6 +49,12 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
+}
+
+test {
+    maxParallelForks = 3
+    useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 tasks {
@@ -95,10 +91,6 @@ tasks.withType(ProcessResources).configureEach {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
-tasks.assemble {
-    dependsOn(reobfJar)
-}
-
 processResources {
     def props = [version: version]
     inputs.properties props
@@ -113,3 +105,15 @@ jacocoTestReport {
         xml.required = true
     }
 }
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.8
+            }
+        }
+    }
+}
+
+check.dependsOn jacocoTestCoverageVerification
